kubernetes/01.kisp-nfs-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
        name: kisp-nfs-deployment
spec:
        replicas: 1
        selector:
                matchLabels:
                        role: kisp-nfs-server
        template:
                metadata:
                        labels:
                                role: kisp-nfs-server
                spec:
                        containers:
                        - name: kisp-nfs-container
                          image: gcr.io/google_containers/volume-nfs:0.8
                          ports:
                                - name: nfs
                                  containerPort: 2049
                                - name: mountd
                                  containerPort: 20048
                                - name: rpcbind
                                  containerPort: 111
                          securityContext:
                                privileged: true
                          volumeMounts:
                                - mountPath: /data
                                  name: kisp-nfs-pvc
                        volumes:
                                - name: kisp-nfs-pvc
                                  gcePersistentDisk:
                                        pdName: kisp-persistent-disk
                                        fsType: ext4
