kubernetes/04.pod-nfs-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kisp-nfs-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: kisp-nfs-test
  template:
    metadata:
      name: kisp-nfs-pod
      labels:
        app: kisp-nfs-test
    spec:
      containers:
      - image: mgautam/kispweb:3.10
        imagePullPolicy: Always
        name: kisp-nfs-container
        volumeMounts:
          # name should match from volumes section
          - name: nfs-volume-1
            mountPath: "/var/www/upload_data_files"
      volumes:
      - name: nfs-volume-1
        persistentVolumeClaim:
          claimName: nfs-pvc
