kubernetes/05.pod-nfs-deployment.yml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kisp-web-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: kisp-web
  template:
    metadata:
      name: kisp-web-pod
      labels:
        app: kisp-web
    spec:
      containers:
      - image: mgautam/kispweb:4.0
        imagePullPolicy: Always
        name: kisp-nfs-container
        volumeMounts:
          # name should match from volumes section
          - name: kisp-nfs-volume
            mountPath: "/var/www/upload_data_files"
      volumes:
      - name: kisp-nfs-volume
        persistentVolumeClaim:
          claimName: kisp-nfs-pvc
