kubernetes/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: my-first.pod
spec:
  containers:
    - image: nginx
      name: my-first1container
