kubernetes/02.nfs-clusterip-service.yml
apiVersion: v1
kind: Service
metadata:
  name: kisp-nfs-service
spec:
  ports:
    - name: nfs
      port: 2049
    - name: mountd
      port: 20048
    - name: rpcbind
      port: 111
  selector:
    role: kisp-nfs-server
