kubernetes/03.nfs-pv-pvc.yml
apiVersion: v1
kind: Service
metadata:
  name: kisp-nfs-service
spec:
  ports:
    - name: nfs
      port: 2049
    - name: mountd
      port: 20048
    - name: rpcbind
      port: 111
  selector:
    role: kisp-nfs-server
gautam_raw@cloudshell:~ (kisportal)$ cat 03.nfs-pv-pvc.yml
apiVersion: v1
kind: PersistentVolume
metadata:
  name: kisp-nfs-pv
spec:
  capacity:
    storage: 10Gi
  accessModes:
    - ReadWriteMany
  nfs:
    server: 10.0.5.132
    path: "/"
