kubernetes/05.pod-loadbalancer-service.yml
apiVersion: v1
kind: Service
metadata:
  name: kisp-web-service
spec:
  ports:
    - name: kisp-port
      protocol: TCP
      port: 80
      targetPort: 5000
  type: LoadBalancer
  selector:
    app: kisp-nfs-test
