kubernetes/06.pod-loadbalancer-service.yml
apiVersion: v1
kind: Service
metadata:
  name: kisp-web-service
spec:
  ports:
    - name: kisp-port
      protocol: TCP
      port: 80
      targetPort: 5000
      nodePort: 31842
  #type: ClusterIP
  #type: LoadBalancer
  type: NodePort
  selector:
    app: kisp-web
