kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-firstservice
spec:
  selector:
    app: mydeploymentapp
  ports:
  - protocol: TCP
    port: 80
    targetPort: 80
    nodePort: 31000
  type: NodePort
